[Ui.Components] [GenericTagInput] fix input bg color in dark mode

--- a/Biflow.Ui.Components/Input/GenericTagInput.razor.css
+++ b/Biflow.Ui.Components/Input/GenericTagInput.razor.css
@@ -4,6 +4,10 @@
     outline: 0;
 }
 
+.taginput input {
+    background-color: inherit;
+}
+
 .taginput input:focus-visible {
     border: none !important;
     outline: none;
